// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarComponent should match snapshot when isMonthView is false 1`] = `
CalendarComponent {
  "context": Object {},
  "getSelectedDate": [Function],
  "handleBackPress": [Function],
  "handleMonthPress": [Function],
  "handleNextPress": [Function],
  "handleSelect": [Function],
  "onDayPress": [Function],
  "onSelectMonth": [Function],
  "props": Object {
    "onSelect": [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "selectedDate": "",
  },
  "refs": Object {},
  "renderCalendar": [Function],
  "renderHeader": [Function],
  "renderItem": [Function],
  "renderKeyExtractor": [Function],
  "renderMonthView": [Function],
  "setState": [Function],
  "state": Object {
    "day": "23",
    "isMonthView": false,
    "month": 6,
    "selectedDate": "",
    "year": "2020",
  },
  "updater": Updater {
    "_callbacks": Array [],
    "_renderer": ReactShallowRenderer {
      "_context": Object {},
      "_didScheduleRenderPhaseUpdate": false,
      "_dispatcher": Object {
        "readContext": [Function],
        "useCallback": [Function],
        "useContext": [Function],
        "useDebugValue": [Function],
        "useDeferredValue": [Function],
        "useEffect": [Function],
        "useImperativeHandle": [Function],
        "useLayoutEffect": [Function],
        "useMemo": [Function],
        "useReducer": [Function],
        "useRef": [Function],
        "useResponder": [Function],
        "useState": [Function],
        "useTransition": [Function],
      },
      "_element": <CalendarComponent
        onSelect={
          [MockFunction] {
            "calls": Array [
              Array [
                "",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        selectedDate=""
      />,
      "_firstWorkInProgressHook": null,
      "_forcedUpdate": false,
      "_instance": [Circular],
      "_isReRender": false,
      "_newState": null,
      "_numberOfReRenders": 0,
      "_renderPhaseUpdates": null,
      "_rendered": <View>
        <CalendarHeader
          headerTitle="July 2020"
          isCurrentMonth={false}
          isMonthView={false}
          onBackPress={[Function]}
          onMonthPress={[Function]}
          onNextPress={[Function]}
        />
        <React.Fragment>
          <Calendar
            current="Thu Jul 23 2020"
            enableSwipeMonths={false}
            hideArrows={true}
            markedDates={
              Object {
                "2020-10-23": Object {
                  "customStyles": Object {
                    "container": Object {
                      "backgroundColor": "#0084F8",
                      "borderRadius": 4,
                    },
                    "text": Object {
                      "color": "#FFFFFF",
                    },
                  },
                },
              }
            }
            markingType="custom"
            minDate={2020-10-23T08:57:13.027Z}
            onDayPress={[Function]}
            renderHeader={[Function]}
            style={
              Object {
                "height": 310,
              }
            }
            theme={Object {}}
          />
          <WithShadowView
            outerViewStyle={
              Object {
                "marginBottom": 20,
                "paddingBottom": 0,
                "paddingTop": 10,
              }
            }
          >
            <Button
              containerStyle={
                Object {
                  "flex": 0,
                  "margin": 16,
                }
              }
              onPress={[Function]}
              title="Select"
              type="primary"
            />
          </WithShadowView>
        </React.Fragment>
      </View>,
      "_rendering": false,
      "_updater": [Circular],
      "_workInProgressHook": null,
    },
  },
}
`;

exports[`CalendarComponent should match snapshot when isMonthView is true 1`] = `
<View>
  <CalendarHeader
    headerTitle="June 2020"
    isCurrentMonth={false}
    isMonthView={false}
    onBackPress={[Function]}
    onMonthPress={[Function]}
    onNextPress={[Function]}
  />
  <Calendar
    current="2020-06-19"
    enableSwipeMonths={false}
    hideArrows={true}
    key="2020-06-19"
    markedDates={
      Object {
        "2020-06-19": Object {
          "customStyles": Object {
            "container": Object {
              "backgroundColor": "#0084F8",
              "borderRadius": 4,
            },
            "text": Object {
              "color": "#FFFFFF",
            },
          },
        },
      }
    }
    markingType="custom"
    minDate={2020-10-23T08:57:13.013Z}
    onDayPress={[Function]}
    renderHeader={[Function]}
    style={
      Object {
        "height": 310,
      }
    }
    theme={Object {}}
  />
  <WithShadowView
    outerViewStyle={
      Object {
        "marginBottom": 20,
        "paddingBottom": 0,
        "paddingTop": 10,
      }
    }
  >
    <Button
      containerStyle={
        Object {
          "flex": 0,
          "margin": 16,
        }
      }
      onPress={[Function]}
      title="Select"
      type="primary"
    />
  </WithShadowView>
</View>
`;
